# batchdist

./: README.md  pyproject.toml
batchdist/: __init__.py
batchdist/examples/: simple_example.py  sinkhorn_example.py
batchdist/src/: batch_distance.py
tests/: test_batchdist.py
