[tool.poetry]
name = "batchdist"
version = "0.1.2"
description = "A small pytorch package for efficiently running pair-wise operations such as distances on the batch-level."
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/mi92/batchdist"
authors = ["Michael Moor <michael.moor@bsse.ethz.ch>"]
include = ["README.md"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.6.0"
unittest = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
